...
        <scene sceneID="uyx-yt-lS0">
            <objects>
                <viewController title="Home" modalTransitionStyle="crossDissolve" id="3pC-wR-CsT" customClass="HomeScreenController" customModule="ThetaBooking" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="dPJ-Pm-2Jo"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="lP9-me-aKC">
                        <barButtonItem key="rightBarButtonItem" image="settings" id="xBm-9p-8sQ">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
...
        <scene sceneID="DfM-Tl-Vt3">
            <objects>
                <tableViewController title="Search" id="BX5-Zd-uFl" customClass="ProfileController" customModule="ThetaBooking" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="182" sectionHeaderHeight="28" sectionFooterHeight="28" id="shx-a4-tmo">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="434"/>
...
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mark Tyers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1a-ob-lHn">
                                            <rect key="frame" x="191" y="13" width="158" height="26"/>
                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
...
        <scene sceneID="4GF-I1-z9g">
            <objects>
                <tableViewController title="Settings" id="ZxC-Vx-o8u" customClass="HomeScreenSettings" customModule="ThetaBooking" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="rDf-tc-0Nv">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Use your university email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bdz-1s-2Cf">
                                <rect key="frame" x="194" y="228" width="213" height="30"/>
                                <constraints>
...
                                </variation>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Do not share with anyone" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lae-sI-JXc">
                                <rect key="frame" x="194" y="318" width="213" height="30"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Rx-WB-WuT">
                                <rect key="frame" x="237" y="462" width="126" height="30"/>
                                <state key="normal" title="Create an account">
                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D6S-TZ-Dli">
                                <rect key="frame" x="276" y="523" width="48" height="30"/>
                                <state key="normal" title="Cancel">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
